--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,9 +1,14 @@
-flask
-flask-cors
-flask_API
-flask-SQLAlchemy
-flask-restful
-psycopg2
-SQLAlchemy
-SQLAlchemy-Json
-SQLAlchemy-Utils
+# Latest versions (Nov 2022) of all libraries, good practice to also include version
+# as without version, docker would install the latest versions which might break code
+
+Flask==2.0.1
+Flask-Cors==3.0.10
+Flask_API==2.0
+Flask-SQLAlchemy==2.5.1
+flask-restful==0.3.9
+gevent==21.12.0
+gunicorn==20.1.0
+psycopg2==2.9.1
+SQLAlchemy==1.4.20
+sqlalchemy-json==0.4.0
+SQLAlchemy-Utils==0.37.8
