Bug: Fix connecting to db

--- a/Dockerfile.http
+++ b/Dockerfile.http
@@ -2,8 +2,9 @@
 # 1. One of the best performances among the python docker images 
 # 2. Small image size, only beaten by alpine images
 # 3. Contains latest python bugfixes
+# 4. Most stable (bullseye still under development)
 # Reference: https://pythonspeed.com/articles/base-image-python-docker-images/
-FROM python:3.10-slim-bullseye
+FROM python:3.9-slim-buster
 
 # Change this in production env
 ENV FLASK_DEBUG=1
@@ -33,13 +34,13 @@ ENV PYTHONPATH /home/apps
 COPY requirements/requirements.txt /
 
 # Only update these when there are new dependencies to install
-RUN python3.10 -m pip install --no-cache-dir --upgrade \
+RUN python3.9 -m pip install --no-cache-dir --upgrade \
     pip \
     setuptools \
     wheel
 
 # Finally install the dependencies, the --no-cache-dir flag saves image space
-RUN python3.10 -m pip install --no-cache-dir \
+RUN python3.9 -m pip install --no-cache-dir \
     -r /requirements.txt
 
 # Copy the source code to the container
@@ -49,6 +50,9 @@ COPY apps /home/apps
 # Public facing port
 EXPOSE 9700
 
+# Allow execution of shell scripts
+RUN chmod +x /wait-for-pg.sh
+
 # Finally, run the wsgi server which creates the flask app
-CMD sh -c '/wait-for-pg.sh && python3.10 /home/apps/core/wsgi.py'
+CMD sh -c '/wait-for-pg.sh && python3.9 /home/apps/core/wsgi.py'
 
