--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -9,7 +9,9 @@ Flask-SQLAlchemy==2.5.1
 flask-restful==0.3.9
 gevent==21.12.0
 gunicorn==20.1.0
+marshmallow==3.12.2
 psycopg2==2.9.1
+requests==2.28.1
 SQLAlchemy==1.4.20
 sqlalchemy-json==0.4.0
 SQLAlchemy-Utils==0.37.8
