--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -15,3 +15,8 @@ requests==2.28.1
 SQLAlchemy==1.4.20
 sqlalchemy-json==0.4.0
 SQLAlchemy-Utils==0.37.8
+
+# Used for testing
+coverage
+pytest
+pytest-dotenv
