--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -14,5 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Test with pytest
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "atrikdas1" --password-stdin
-    - run: cd /home/apps; coverage run -m pytest -x -rA
+      run: cd /home/apps; coverage run -m pytest -x -rA
