--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   # Chosing an alpine image because of its small image size thereby saving memory
   note-taker-db:
     image: postgres:12.3-alpine
+    networks:
+      - notes-net
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -21,6 +23,8 @@ services:
       - note-taker-db
     ports:
       - "9700:9700"
+    networks:
+      - notes-net
     environment:
       - NOTE_TAKER_DB_USER=postgres
       - NOTE_TAKER_DB_PASSWORD=postgres
@@ -38,7 +42,11 @@ services:
     depends_on:
       - note-taker-app
     ports:
-      - "8080:80"
+      - "3000:3000"
+    networks:
+      - notes-net
 
+networks:
+  notes-net:
 volumes:
   note-taker-db_data:
