Chore: Added docstrings and type checks and other comments

--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -1,4 +1,4 @@
-name: Pytest with Pipenv & Docker
+name: Test Backend APIs with Pytest
 # workflow triggered by any push on any branch
 on: [push]
 jobs:
